--- a/WebFirst/WebContent/index.html
+++ b/WebFirst/WebContent/index.html
@@ -13,7 +13,8 @@
   <body>
     <h1>Hello, world!</h1>
     <a href="MySecondServlet?action=1" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
-	<a href="MySecondServlet?action=2" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Second link</a>
+	<a href="MySecondServlet?action=2" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Book All</a>
+	<a href="MySecondServlet?action=3" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Author All</a>
 	
 	
 	<button type="button" class="btn btn-link">Link</button>
