--- a/WebFirst/WebContent/index.html
+++ b/WebFirst/WebContent/index.html
@@ -12,16 +12,54 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+  <!-- 
     <a href="MySecondServlet?action=1" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
 	<a href="MySecondServlet?action=2" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Book All</a>
 	<a href="MySecondServlet?action=3" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Author All</a>
+-->
+
+	<div class="btn-group">
+	  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	    Action
+	  </button>
+	  <div class="dropdown-menu">
+	    <a class="dropdown-item" href="MySecondServlet?action=1">Action Test</a>
+	     <div class="dropdown-divider"></div>
+	    <a class="dropdown-item" href="MySecondServlet?action=2">Book All</a>
+	    <a class="dropdown-item" href="MySecondServlet?action=3">Author All</a>
+	  </div>
+	</div>
 	
 	
-	<button type="button" class="btn btn-link">Link</button>
+	
+	
+	
+	 <form action = "MySecondServlet" method = "POST">
+
+	<div class="input-group mb-3">
+	  <div class="input-group-prepend">
+	    <span class="input-group-text" id="basic-addon1">Action</span>
+	  </div>
+	  <input type="text" name="action" class="form-control" placeholder="action" aria-label="action" aria-describedby="basic-addon1"/>
+	</div>
+
+	<input type="submit" class="btn btn-primary" data-toggle="input" autocomplete="off"/>
+	</form>
+	
+	
+	
+     
+	
+	
+	
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
+ 
   </body>
+  
 </html>
