--- a/WebFirst/WebContent/index.html
+++ b/WebFirst/WebContent/index.html
@@ -18,9 +18,16 @@
 	<a href="MySecondServlet?action=3" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Author All</a>
 -->
 
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Library</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Library</h6>
+
+
 	<div class="btn-group">
 	  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    Action
+	   GET Action 
 	  </button>
 	  <div class="dropdown-menu">
 	    <a class="dropdown-item" href="MySecondServlet?action=1">Action Test</a>
@@ -43,12 +50,14 @@
 	  <input type="text" name="action" class="form-control" placeholder="action" aria-label="action" aria-describedby="basic-addon1"/>
 	</div>
 
-	<input type="submit" class="btn btn-primary" data-toggle="input" autocomplete="off"/>
+	<input type="submit" class="btn btn-primary" data-toggle="input" autocomplete="off" value="POST Action "/>
 	</form>
 	
 	
 	
-     
+ 
+  </div>
+</div>
 	
 	
 	
