--- a/WebFirst/WebContent/index2.html
+++ b/WebFirst/WebContent/index2.html
@@ -11,9 +11,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-  <!--   
     <h1>Hello, world!</h1>
-
+  <!-- 
     <a href="MySecondServlet?action=1" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
 	<a href="MySecondServlet?action=2" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Book All</a>
 	<a href="MySecondServlet?action=3" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Author All</a>
@@ -23,7 +22,7 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">Library</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Select method</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Library</h6>
 
 
 	<div class="btn-group">
@@ -35,12 +34,11 @@
 	     <div class="dropdown-divider"></div>
 	    <a class="dropdown-item" href="MySecondServlet?action=2">Book All</a>
 	    <a class="dropdown-item" href="MySecondServlet?action=3">Author All</a>
-	    <a class="dropdown-item" href="AddAuthor.jsp">Add author</a>
 	  </div>
 	</div>
 	
-<!--  
-	<form action = "MySecondServlet" method = "POST">
+
+	 <form action = "MySecondServlet" method = "POST">
 
 	<div class="input-group mb-3">
 	  <div class="input-group-prepend">
@@ -51,7 +49,7 @@
 
 	<input type="submit" class="btn btn-primary" data-toggle="input" autocomplete="off" value="POST Action "/>
 	</form>
--->
+
 
   </div>
 </div>
